--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   "homepage": "https://github.com/abeelmazhar/nodejs#readme",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.4"
   },
   "devDependencies": {
